# urirun-connector-mcp-filesystem

./: CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
examples/: README.md  quickstart.sh
tests/: test_contract.py  test_mcp_filesystem.py
urirun_connector_mcp_filesystem/: __init__.py  connector.manifest.json  contracts.json  core.py
