[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-mcp-filesystem"
version = "0.1.0"
description = "MCP Filesystem connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun>=0.4.14",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/mcp-filesystem"
Repository = "https://github.com/if-uri/urirun-connector-mcp-filesystem"

[project.scripts]
urirun-mcp-filesystem = "urirun_connector_mcp_filesystem.core:main"

[project.entry-points."urirun.bindings"]
mcp-filesystem = "urirun_connector_mcp_filesystem.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_mcp_filesystem*"]

[tool.setuptools.package-data]
urirun_connector_mcp_filesystem = ["connector.manifest.json"]
